# htcp-server

./: Cargo.toml  README.md  hurl.env.test  hurl.just  justfile
.github/workflows/: verify.yaml
api_tests/: root.hurl
src/: client.rs  main.rs  server.rs
test_server/: justfile
test_server/src/: main.rs
