[package]
name = "htcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
anyhow= "1"